Move ex02 from private to public repo

--- a/exercise02/Blockchain/src/main/resources/application.properties
+++ b/exercise02/Blockchain/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=\${SERVER_PORT}:1010
 
+blockchain.adjustableDifficulty=true
+blockchain.maxDifficulty=4
+blockchain.targetBlockDurationSeconds=10
