Upload ex03 initial

--- a/exercise02/Blockchain/src/main/resources/application.properties
+++ b/exercise02/Blockchain/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=\${SERVER_PORT}:1010
+# server.port=\${SERVER_PORT}:1010
 
 blockchain.adjustableDifficulty=true
 blockchain.maxDifficulty=4
